--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
       </ul>
+      <form class="d-flex" style="margin-right: 20px" action="/search">
+        <input class="form-control me-2" name="q" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
       <ul class="navbar-nav pull-xs-right">
             <% if user_signed_in? %>
               <li class="nav-item">
